--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,4 +1,4 @@
-name: Deploy EKS, Application, and then Destroy
+name: Deploy EKS, LBC, Application, and then Destroy
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - 'k8s-manifests/**'
 
 jobs:
-  # Job 1: Deploy the EKS infrastructure
+  # Job 1: Deploy the EKS infrastructure and LBC role
   terraform-deploy:
     name: '1. Terraform Deploy EKS Cluster'
     runs-on: ubuntu-latest
@@ -19,6 +19,8 @@ jobs:
     outputs:
       cluster_name: ${{ steps.eks.outputs.cluster_name }}
       region: ${{ steps.eks.outputs.region }}
+      vpc_id: ${{ steps.eks.outputs.vpc_id }}
+      lbc_iam_role_arn: ${{ steps.eks.outputs.lbc_iam_role_arn }}
 
     steps:
       - name: Checkout Code
@@ -40,17 +42,19 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve -input=false
 
-      - name: Get Cluster Name from Terraform Output
+      - name: Get Terraform Outputs
         id: eks
         run: |
           echo "cluster_name=$(terraform output -raw cluster_name)" >> $GITHUB_OUTPUT
           echo "region=$(terraform output -raw region)" >> $GITHUB_OUTPUT
+          echo "vpc_id=$(terraform output -raw vpc_id)" >> $GITHUB_OUTPUT
+          echo "lbc_iam_role_arn=$(terraform output -raw lbc_iam_role_arn)" >> $GITHUB_OUTPUT
 
-  # Job 2: Deploy the 3-Tier Application onto the new cluster
+  # Job 2: Deploy the LBC and the 3-Tier Application
   deploy-application:
-    name: '2. Deploy Application with Kubectl'
+    name: '2. Deploy LBC & Application'
     runs-on: ubuntu-latest
-    needs: terraform-deploy # This job runs only after the cluster is ready
+    needs: terraform-deploy
 
     steps:
       - name: Checkout Code
@@ -64,28 +68,40 @@ jobs:
           aws-region: ${{ needs.terraform-deploy.outputs.region }}
 
       - name: Configure Kubectl
+        run: aws eks --region ${{ needs.terraform-deploy.outputs.region }} update-kubeconfig --name ${{ needs.terraform-deploy.outputs.cluster_name }}
+
+      - name: Setup Helm
+        uses: azure/setup-helm@v4
+
+      - name: Install AWS Load Balancer Controller with Helm
         run: |
-          aws eks --region ${{ needs.terraform-deploy.outputs.region }} update-kubeconfig --name ${{ needs.terraform-deploy.outputs.cluster_name }}
-          echo "kubectl configured for cluster: ${{ needs.terraform-deploy.outputs.cluster_name }}"
+          helm repo add eks https://aws.github.io/eks-charts
+          helm repo update eks
+          helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
+            -n kube-system \
+            --set clusterName=${{ needs.terraform-deploy.outputs.cluster_name }} \
+            --set serviceAccount.create=true \
+            --set serviceAccount.name=aws-load-balancer-controller \
+            --set serviceAccount.annotations."eks\.amazonaws\.com/role-arn"=${{ needs.terraform-deploy.outputs.lbc_iam_role_arn }} \
+            --set region=${{ needs.terraform-deploy.outputs.region }} \
+            --set vpcId=${{ needs.terraform-deploy.outputs.vpc_id }}
 
       - name: Deploy Application Manifests
-        run: |
-          echo "Applying Kubernetes manifests..."
-          # You must install the AWS LBC before applying the ingress
-          # For a portfolio project, it's assumed this is done manually during the wait step
-          kubectl apply -f k8s-manifests/
+        run: kubectl apply -f k8s-manifests/
 
-      - name: Wait for deployments to be ready
+      - name: Wait for deployments and Ingress
         run: |
           echo "Waiting for deployments to roll out..."
           kubectl wait --for=condition=available --timeout=5m deployment/frontend-deployment
           kubectl wait --for=condition=available --timeout=5m deployment/backend-api-deployment
+          echo "Waiting for Load Balancer to be provisioned by Ingress..."
+          kubectl wait --for=jsonpath='{.status.loadBalancer.ingress}' --timeout=5m ingress/main-ingress
 
   # Job 3: Wait for verification and then destroy everything
   wait-and-destroy:
     name: '3. Wait and Destroy'
     runs-on: ubuntu-latest
-    needs: deploy-application # This job runs only after the application is deployed
+    needs: deploy-application
 
     defaults:
       run:
@@ -97,9 +113,9 @@ jobs:
 
       - name: Wait for Verification Window
         run: |
-          echo "Infrastructure and Application are live. Waiting for 10 minutes for verification."
-          echo "To see the app, install the AWS LBC, then run 'kubectl get ingress main-ingress' to get the URL."
-          sleep 600 # Waits for 600 seconds (10 minutes)
+          echo "Infrastructure, LBC, and Application are live. Waiting for 10 minutes for verification."
+          echo "The Load Balancer URL will be available shortly. Run 'kubectl get ingress main-ingress' locally to find it."
+          sleep 600
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -115,6 +131,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Destroy
-        run: |
-          echo "Verification window over. Destroying infrastructure..."
-          terraform destroy -auto-approve -input=false
+        run: terraform destroy -auto-approve -input=false
